--- a/Meleze.SBC.GUI/Meleze.SBC.GUI/wwwroot/index.html
+++ b/Meleze.SBC.GUI/Meleze.SBC.GUI/wwwroot/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="lib/bootstrap-icons/font/bootstrap-icons.min.css" />
     <link rel="stylesheet" href="css/app.css" />
     <link href="Meleze.SBC.GUI.styles.css" rel="stylesheet" />
+    <script src="js/script.js" defer></script>
 </head>
 
 <body>
